# pilotai-credit-spreads

./: .coverage  .coveragerc  .dockerignore  .env.champion  .env.example  .env.exp036  .env.exp059  .env.exp154  .env.exp305  .env.exp400  .env.exp401  .env.exp503  .env.exp600  .env.sync  .gitignore  .pids_both  =6.90.0  CARLOS_CRITIQUE.md  CHANGELOG_ENSEMBLE.md  CLAUDE.md  CODE_REVIEW-2026-02-16.md  CODE_REVIEW-7panel.md  CODE_REVIEW.md  CODE_REVIEW_EXHAUSTIVE-2026-02-16.md  CODE_REVIEW_FULL.md  CODE_REVIEW_INSTRUCTIONS.md  CREDENTIALS.md  CRITICAL_PRIORITY.txt  CRITIQUE_BACKTEST_V3.md  Dockerfile  EXPERIMENT_PROTOCOL.md  LIQUIDITY_FIX_PROPOSAL.md  MASTERPLAN.md  ML_INTEGRATION_PROPOSAL.md  Makefile  PAPER_TRADING_EXP401.md  PAPER_TRADING_QUICKSTART.md  PROJECT_SUMMARY.md  PROPOSAL.md  PROPOSAL_BACKTEST_V3.md  (+62 more)
alerts/: __init__.py  alert_generator.py  alert_position_sizer.py  alert_router.py  alert_schema.py  earnings_config.py  earnings_exit_monitor.py  earnings_scanner.py  gamma_config.py  gamma_exit_monitor.py  gamma_scanner.py  iron_condor_config.py  iron_condor_exit_monitor.py  iron_condor_scanner.py  momentum_config.py  momentum_exit_monitor.py  momentum_scanner.py  portfolio_heat_tracker.py  risk_gate.py  telegram_bot.py  zero_dte_backtest.py  zero_dte_config.py  zero_dte_exit_monitor.py  zero_dte_scanner.py
analysis/: feature_importance.txt
api/: README.md  macro_api.py
backtest/: __init__.py  __main__.py  backtester.py  backtester_enhanced.py  backtester_fixed.py  btc_credit_spread_backtester.py  crypto_data_adapter.py  crypto_param_sweep.py  (+4 more)
docs/: plan.md  (+16 more)
(+740 files in other folders)
